color hover change

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,7 +35,7 @@ url("css/fonts/SportingGrotesque-bold.svg#filename") format("svg");
 
 
 a {
-  color: #2dc997;
+  color: #7E65F5;
   text-decoration: none;
 }
 
