--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -415,6 +415,8 @@ h1, h2, h3, h4, h5, h6 {
   }
 }
 
+.form
+
 #hero:before {
   content: "";
 
@@ -694,6 +696,12 @@ section {
 
 /* Services Section
 --------------------------------*/
+
+.form{
+	 margin: 0 auto;
+	display: block;
+}
+
 #services {
   background: #fff;
   background-size: cover;
